@@ -2,6 +2,7 @@ package seedu.address.storage;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonProperty;
@@ -12,6 +13,7 @@ import seedu.address.model.AddressBook;
 import seedu.address.model.ReadOnlyAddressBook;
 import seedu.address.model.appointment.Appointment;
 import seedu.address.model.person.Person;
+import seedu.address.model.prescription.Prescription;
 
 /**
  * An Immutable AddressBook that is serializable to JSON format.
@@ -21,17 +23,26 @@ public class JsonSerializableAddressBook {
 
     public static final String MESSAGE_DUPLICATE_PERSON = "Persons list contains duplicate person(s).";
     public static final String MESSAGE_DUPLICATE_APPOINTMENT = "Appointments list contains duplicate appointment(s).";
-    public static final String MESSAGE_DUPLICATE_PRESCRIPTION = "Prescription list contains duplicate prescription(s).";
+    public static final String MESSAGE_DUPLICATE_PRESCRIPTION =
+        "Prescriptions list contains duplicate prescription(s).";
 
     private final List<JsonAdaptedPerson> persons = new ArrayList<>();
     private final List<JsonAdaptedAppointment> appointments = new ArrayList<>();
     private final List<JsonAdaptedPrescription> prescriptions = new ArrayList<>();
 
+    /**
+     * Constructs a {@code JsonSerializableAddressBook} with the specified lists of persons and appointments.
+     * This constructor is used by Jackson during deserialization from JSON.
+     * If the provided lists are {@code null}, the corresponding internal lists remain empty.
+     *
+     * @param persons the list of {@link JsonAdaptedPerson} objects representing persons
+     * @param appointments the list of {@link JsonAdaptedAppointment} objects representing appointments
+     * @param prescriptions the list of {@link JsonAdaptedPrescription} objects representing prescriptions
+     */
     @JsonCreator
     public JsonSerializableAddressBook(@JsonProperty("persons") List<JsonAdaptedPerson> persons,
                                        @JsonProperty("appointments") List<JsonAdaptedAppointment> appointments,
-                                       @JsonProperty("prescriptions") List<JsonAdaptedPrescription> prescriptions
-                                       ) {
+                                       @JsonProperty("prescriptions") List<JsonAdaptedPrescription> prescriptions) {
         if (persons != null) {
             this.persons.addAll(persons);
         }
@@ -43,16 +54,23 @@ public class JsonSerializableAddressBook {
         }
     }
 
+    /**
+     * Converts a given {@link ReadOnlyAddressBook} into a {@code JsonSerializableAddressBook}.
+     * It creates JSON-adapted versions of each person, appointment and prescription contained
+     * in the provided {@code ReadOnlyAddressBook}.
+     *
+     * @param source the {@link ReadOnlyAddressBook} to convert to a JSON-serializable form
+     */
     public JsonSerializableAddressBook(ReadOnlyAddressBook source) {
         persons.addAll(source.getPersonList().stream()
                 .map(JsonAdaptedPerson::new)
-                .toList());
+                .collect(Collectors.toList()));
         appointments.addAll(source.getAppointmentList().stream()
                 .map(JsonAdaptedAppointment::new)
-                .toList());
+                .collect(Collectors.toList()));
         prescriptions.addAll(source.getPrescriptionList().stream()
                 .map(JsonAdaptedPrescription::new)
-                .toList());
+                .collect(Collectors.toList()));
     }
 
     /**
@@ -77,6 +95,14 @@ public class JsonSerializableAddressBook {
                 throw new IllegalValueException(MESSAGE_DUPLICATE_APPOINTMENT);
             }
             addressBook.addAppointment(appointment);
+        }
+
+        for (JsonAdaptedPrescription jsonAdaptedPrescription : prescriptions) {
+            Prescription prescription = jsonAdaptedPrescription.toModelType();
+            if (addressBook.hasPrescription(prescription)) {
+                throw new IllegalValueException(MESSAGE_DUPLICATE_PRESCRIPTION);
+            }
+            addressBook.addPrescription(prescription);
         }
 
         return addressBook;
